[project]
name = "sampleplan"
version = "0.1.1"
description = "Fast balanced sequence sampling via a compiled Nim backend"
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"

authors = [
  {name = "Maxime Larocque", email = "maxime.larocque@randomschemes.com"}
]

keywords = [
  "sampling",
  "random",
  "balanced",
  "permutation",
  "simulation",
  "nim",
  "ctypes"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

dependencies = [
  "numpy>=1.21"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/HistoryBeginsAtSumer/sampleplan"
"Source" = "https://github.com/HistoryBeginsAtSumer/sampleplan"
"Tracker" = "https://github.com/HistoryBeginsAtSumer/sampleplan/issues"

[tool.setuptools]
packages = ["sampleplan"]